--- a/audacia/pubspec.yaml
+++ b/audacia/pubspec.yaml
@@ -1,5 +1,5 @@
 name: audacia
-description: A new Flutter project.
+description: Building a T1 app to improve health tracking.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
